--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
 
-        <img src="/hotphoto/Images/logo.png"  class="brand-logo" alt="logo"/>
+        <img src="hotphoto/Images/logo.png"  class="brand-logo" alt="logo"/>
         <ul class="nav-links">
             <li class="nav-items"><a href="#">TV</a></li>
             <li class="nav-items"><a href="#">Movies</a></li>
@@ -36,7 +36,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsa totam voluptas magni dolor molestias nostrum vero molestiae? Porro temporibus iste culpa placeat, possimus blanditiis necessitatibus commodi cum odio quos?
                     </p>
                 </div>
-                <img src="/hotphoto/Images/slider 1.png" alt=""/>
+                <img src="hotphoto/Images/slider 1.png" alt=""/>
             </div> 
         </div> 
     </div>
