--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button class="nxt-btn"><img src="/hotphoto/Images/nxt.png" alt=""></button>
         <div class="card-container">
             <div class="card">
-                <img src="/hotphoto/img/poster 4.webp" class="card-img" alt="p1"/>
+                <img src="hotphoto/img/poster 4.webp" class="card-img" alt="p1"/>
                 <div class="card-body">
                     <h2 class="name">CHHICHHORE</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/hotphoto/Images/poster 2.png" class="card-img" alt="p2"/>
+                <img src="hotphoto/Images/poster 2.png" class="card-img" alt="p2"/>
                 <div class="card-body">
                     <h2 class="name">Mulan</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
@@ -84,7 +84,7 @@
                 </div>
             </div> 
             <div class="card">
-                <img src="/hotphoto/Images/poster 3.png" class="card-img" alt="p3"/>
+                <img src="hotphoto/Images/poster 3.png" class="card-img" alt="p3"/>
                 <div class="card-body">
                     <h2 class="name">The Falcon and the Winter Soldier</h2>
                     <h6 class="des">This is a Best</h6>
@@ -92,7 +92,7 @@
                 </div>
             </div> 
             <div class="card">
-                <img src="/hotphoto/img/card 12.webp" class="card-img" alt="p4"/>
+                <img src="hotphoto/img/card 12.webp" class="card-img" alt="p4"/>
                 <div class="card-body">
                     <h2 class="name">TANHAJI</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
