--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
 
-        <img src="hotphoto/Images/logo.png"  class="brand-logo" alt="logo"/>
+        <img src="/hotphoto/Images/logo.png"  class="brand-logo" alt="logo"/>
         <ul class="nav-links">
             <li class="nav-items"><a href="#">TV</a></li>
             <li class="nav-items"><a href="#">Movies</a></li>
@@ -36,7 +36,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsa totam voluptas magni dolor molestias nostrum vero molestiae? Porro temporibus iste culpa placeat, possimus blanditiis necessitatibus commodi cum odio quos?
                     </p>
                 </div>
-                <img src="hotphoto/Images/slider 1.png" alt=""/>
+                <img src="/hotphoto/Images/slider 1.png" alt=""/>
             </div> 
         </div> 
     </div>
@@ -68,7 +68,7 @@
         <button class="nxt-btn"><img src="/hotphoto/Images/nxt.png" alt=""></button>
         <div class="card-container">
             <div class="card">
-                <img src="hotphoto/img/poster 4.webp" class="card-img" alt="p1"/>
+                <img src="/hotphoto/img/poster 4.webp" class="card-img" alt="p1"/>
                 <div class="card-body">
                     <h2 class="name">CHHICHHORE</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="hotphoto/Images/poster 2.png" class="card-img" alt="p2"/>
+                <img src="/hotphoto/Images/poster 2.png" class="card-img" alt="p2"/>
                 <div class="card-body">
                     <h2 class="name">Mulan</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
@@ -84,7 +84,7 @@
                 </div>
             </div> 
             <div class="card">
-                <img src="hotphoto/Images/poster 3.png" class="card-img" alt="p3"/>
+                <img src="/hotphoto/Images/poster 3.png" class="card-img" alt="p3"/>
                 <div class="card-body">
                     <h2 class="name">The Falcon and the Winter Soldier</h2>
                     <h6 class="des">This is a Best</h6>
@@ -92,7 +92,7 @@
                 </div>
             </div> 
             <div class="card">
-                <img src="hotphoto/img/card 12.webp" class="card-img" alt="p4"/>
+                <img src="/hotphoto/img/card 12.webp" class="card-img" alt="p4"/>
                 <div class="card-body">
                     <h2 class="name">TANHAJI</h2>
                     <h6 class="des">This is a Best Marvel Show</h6>
